--- a/public/style.css
+++ b/public/style.css
@@ -366,3 +366,25 @@ body {
         display: none;
     }
 }
+
+/* Fade transitions */
+.fade-enter {
+	opacity: 0;
+}
+
+.fade-enter-active {
+	transition: opacity 0.5s;
+}
+
+[v-cloak] > * {
+	display: none;
+}
+
+[v-cloak] > #loading {
+	display: block;
+	padding: 1em;
+}
+
+#loading {
+	display: none;
+}
